[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douwe"
version = "0.1.0"
description = "Run douwe.com projects locally from their standalone repositories."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Douwe Osinga" },
]
dependencies = [
  "Jinja2>=3.1",
  "PyYAML>=6.0",
  "tornado>=6.4",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://douwe.com/projects/douwe_runner"
Repository = "https://github.com/DOsinga/douwe_runner"

[project.scripts]
douwe = "douwe:main"

[tool.setuptools]
py-modules = ["douwe"]
